Changed editor and strategy home to use full name

--- a/src/components/editor/aq-editor-edit.html
+++ b/src/components/editor/aq-editor-edit.html
@@ -172,7 +172,7 @@
                         is-programmer="{{isProgrammer}}"
                         is-running="{{isRunning}}"
                         class="paper-header"
-                        strategy-name="[[strategy.name]]" 
+                        strategy-name="[[strategy.fullName]]" 
                         strategy-desc="[[strategy.description]]"
                         narrow="[[narrow]]"
                         toggle-active="[[checkToggleActive(narrow, showSidebar)]]" 
