--- a/src/components/analyze/aq-analyze-home.html
+++ b/src/components/analyze/aq-analyze-home.html
@@ -493,6 +493,7 @@
             },
 
             onComparisonOff: function() {	
+            	this.checkAllItems = null;
             	this.checkAllItems = false;
             },
 
