Bug Fix: 1. Check for token before sending WS request. 2. Avoid duplicate requests 3. Change in backtest header now propagates

--- a/src/components/common/backtest/aq-backtest-detail-item.html
+++ b/src/components/common/backtest/aq-backtest-detail-item.html
@@ -534,14 +534,15 @@
             },
 
             onBacktestException: function(e) {
-                this.backtestHeader[3].metric = "Exception";
                 var backtestHeader = this.deepCopy(this.backtestHeader);
+                backtestHeader[3].metric = "Exception";
+                //var backtestHeader = this.backethis.deepCopy(this.backtestHeader);
                 this.backtestHeader = [];
                 this.backtestHeader = backtestHeader;              
             },
 
             onBacktestCompletion: function(e) {
-                var backtestHeader = this.backtestHeader;
+                var backtestHeader = this.deepCopy(this.backtestHeader);
                 backtestHeader[3].metric = "Complete";
                 this.backtestHeader = [];
                 this.backtestHeader = backtestHeader;
