--- a/src/components/common/aq-socket-handler.html
+++ b/src/components/common/aq-socket-handler.html
@@ -23,6 +23,9 @@
      	<iron-signals on-iron-signal-backtest-exception='onBacktestException'>
         </iron-signals>
 
+        <iron-signals on-iron-signal-backtest-started='onBacktestStarted'>
+        </iron-signals>
+
 		<aq-check-authentication id='authItem'></aq-check-authentication>
 
 		<aq-web-socket 
@@ -99,6 +102,12 @@
             	this.subscribeAllRequest();	
 	        },
 
+	        addRequest: function(msgForWS) {
+	        	if(this.wsRequests.indexOf(msgForWS) == -1) {
+          			this.wsRequests.push(msgForWS);	
+          		}
+	        },
+
 	        subscribeAllRequest: function() {
          		if(this.backtests) {
          			Object.keys(this.backtests).forEach(backtestId => {
@@ -106,15 +115,17 @@
 
          					this.sendDataNew(backtestId);
 
-         					var msgForWS = {'aimsquant-token': this.$.authItem.getToken(),
-		                  		action: 'subscribe-backtest',
-		                  		backtestId: backtestId};
+         					if(this.$.authItem.checkHasToken()) {
+	         					var msgForWS = {'aimsquant-token': this.$.authItem.getToken(),
+			                  		action: 'subscribe-backtest',
+			                  		backtestId: backtestId};
 
-		                  	if(this.$.webSocketConn.isOpen()) {
-		                  		this.$.webSocketConn.send(msgForWS);
-		                  	} else {
-		                  		this.wsRequests.push(msgForWS);
-		                  	}	
+			                  	if(this.$.webSocketConn.isOpen()) {
+			                  		this.$.webSocketConn.send(msgForWS);
+			                  	} else {
+			                  		this.addRequest(msgForWS);
+			                  	}	
+		                  	}
          				}
          			});
          		}
@@ -128,29 +139,34 @@
 
 	        subscribeOneRequest: function(backtestId) {
 	        	if(this.backtests[backtestId].subscription) {
- 					var msgForWS = {'aimsquant-token': this.$.authItem.getToken(),
+	        		if(this.$.authItem.checkHasToken()) {
+ 						var msgForWS = {'aimsquant-token': this.$.authItem.getToken(),
                   		action: 'subscribe-backtest',
                   		backtestId: backtestId};
 
-                  	if(this.$.webSocketConn.isOpen()) {
-                  		this.$.webSocketConn.send(msgForWS);
-                  	} else {
-                  		this.wsRequests.push(msgForWS);
-                  		this.$.webSocketConn.open();
-                  	}	
+	                  	if(this.$.webSocketConn.isOpen()) {
+	                  		this.$.webSocketConn.send(msgForWS);
+	                  	} else {
+	                  		this.addRequest(msgForWS);
+	                  		this.$.webSocketConn.open();
+	                  	}	
+                  	}
  				}
 	        },
 
 	        unsubscribeOneRequest: function(backtestId) {
-	        	var msgForWS = {'aimsquant-token': this.$.authItem.getToken(),
-                  		action: 'unsubscribe-backtest',
-                  		backtestId: backtestId};
+	        	
+	        	if(this.$.authItem.checkHasToken()) {
+		        	var msgForWS = {'aimsquant-token': this.$.authItem.getToken(),
+	                  		action: 'unsubscribe-backtest',
+	                  		backtestId: backtestId};
 
-              	if(this.$.webSocketConn.isOpen()) {
-              		this.$.webSocketConn.send(msgForWS);
-              	} else {
-              		this.wsRequests.push(msgForWS);
-              		this.$.webSocketConn.open();
+	              	if(this.$.webSocketConn.isOpen()) {
+	              		this.$.webSocketConn.send(msgForWS);
+	              	} else {
+	              		this.addRequest(msgForWS);
+	              		this.$.webSocketConn.open();
+	              	}
               	}	
 	        },
 
@@ -179,13 +195,22 @@
 		            //check if socket connection is open
 		            if (this.$.webSocketConn.isOpen()) {
 		                this.$.webSocketConn.send(msgForWS);  
-		            } else if(this.$.webSocketConn.isClosed()) {    
-		                this.push(wsRequests, msgForWS);
+		            } else {    
+		                this.addRequest(msgForWS);
 		                this.$.webSocketConn.open();
-		            } else {
-		                this.push(wsRequests, msgForWS);
-		            }
+		            } 
 	            }
+	        },
+
+
+	        //Now, backtest is launched without sending WS message
+	        onBacktestStarted: function(e) {
+	        	var backtestId = e.detail.id
+
+	            //Set subscription to true
+	            this.backtests[backtestId] = {data:[], subscription:true,bulksent:false, currentIndex:0};
+
+	            this.handleSubscription(backtestId);
 	        },
 
 	        handleSubscription: function(backtestId) {
@@ -265,61 +290,6 @@
 
               	return stitchedData;
           	},
-
-	        // Updates every 1 seconds and updates maximum of 200 points at once.
-	        //NOT IN USE
-	        sendDataSlowly: function(backtestId) {
-	            var timeGap = 1000;
-	            var maxLimit = 200;
-	            
-	            if(this.backtests[backtestId]) {
-	                if(this.backtests[backtestId].subscription) {
-	                
-	                  	var currentIndex = this.backtests[backtestId].currentIndex;
-	                  	var currentLength = this.backtests[backtestId].data.length;
-	                  
-	                  	if(currentIndex <  currentLength && currentLength > 0) {  
-                    	  	var j = 0;
-	                      	for(var i=currentIndex; i<currentLength && j<=maxLimit ; i++) { 
-                          		var dataPoint = this.backtests[backtestId].data[i];
-                          		this.fire('iron-signal',{name:'point-data', data:dataPoint});
-                          		this.backtests[backtestId].currentIndex = i+1;
-                          		j++;
-	                      	}
-	                  	}
-	                  
-	                  this.async(function(){this.sendDataSlowly(backtestId);}, timeGap);
-
-	                }
-	            }
-	        },
-
-	        //LONG POLLING NOT WORKING OUT too(too slow and too many db interactions)
-         	sendData: function(backtestId) {
-             	var maxLimit = 200;
-	           
-	            if(this.backtests[backtestId]) {
-	                if(this.backtests[backtestId].subscription) {
-	                  
-	                  var currentIndex = this.backtests[backtestId].currentIndex;
-	                  var currentLength = this.backtests[backtestId].data.length;
-	                  
-	                  if(currentIndex <  currentLength && currentLength > 0) {  
-	                      var j = 0;
-	                      for(var i=currentIndex; i<currentLength; i++) { 
-	                          var dataPoint = this.backtests[backtestId].data[i];
-
-	                          this.fire('iron-signal',{name:'point-data', data:dataPoint});
-	                          this.backtests[backtestId].currentIndex = i+1;
-	                          j++;
-	                      }
-	                  }
-	                  
-	                  //this.async(function(){this.sendDataSlowly(backtestId);}, timeGap);
-
-	                }
-	            }
-	        },
 
             onBacktestCompleted: function(e) {
 	            if(e.detail) {
