--- a/src/components/community/aq-community-postdetail-content.html
+++ b/src/components/community/aq-community-postdetail-content.html
@@ -50,9 +50,10 @@
             min-height: 100px;
             font-size: 16px;
             font-family: 'Lato', sans-serif;
-            color: #3c3c3c;
+            color: black;
             padding-left: 30px
             padding-right: 30px;
+            line-height: 24px;
         }
         
         .bar {
