--- a/src/components/aq-footer.html
+++ b/src/components/aq-footer.html
@@ -1,6 +1,8 @@
 <link rel="import" href="../../bower_components/iron-flex-layout/iron-flex-layout-classes.html">
 
 <dom-module id='aq-footer'>
+    <style include="iron-flex iron-flex-alignment iron-positioning"></style>
+
 	<style>
 		.footer {      
 	        --bottom: 0px;
