Added "restamp" flag in all "iron-lazy-page" template Modified the current paths

--- a/src/components/analyze/aq-analyze-home-backtest-item.html
+++ b/src/components/analyze/aq-analyze-home-backtest-item.html
@@ -274,6 +274,8 @@
                     //notify:true,
                     observer:'_checkAllChanged',
                 },
+
+                backtestHeader: Array,
             },
 
             computeBacktestHeader: function() {
