--- a/src/components/analyze/aq-analyze-home-header.html
+++ b/src/components/analyze/aq-analyze-home-header.html
@@ -112,7 +112,10 @@
             	canRun: {
             		type: Boolean,
             		value: false,
-            	}
+            	},
+            	
+            	header:Array,
+
 			},
 
 			attached: function() {
