--- a/src/components/aq-footer.html
+++ b/src/components/aq-footer.html
@@ -45,7 +45,7 @@
 
             <div class="layout vertical self-start footer-list">
             	<h4>Policies</h4>
-              	<p class="footer-link" route="/policy/tnc" on-tap='onClickFooterLink'>Terms And Conditions</a></p>
+              	<p class="footer-link" route="/policy/tnc" on-tap='onClickFooterLink'>Terms of Use</a></p>
               	<p class="footer-link" route="/policy/privacy" on-tap='onClickFooterLink'>Privacy Policy</a></p>
             </div>
 
