--- a/src/components/aq-policy.html
+++ b/src/components/aq-policy.html
@@ -83,7 +83,7 @@
 				var title = "";
 
 				if(policyType == 'tnc') {
-					title =  "Terms And Conditions";
+					title =  "Terms of Use";
 				} else if(policyType = 'privacy') {
 					title = "Privacy Policy";
 				}
