--- a/src/components/common/aq-icon-expandable-search.html
+++ b/src/components/common/aq-icon-expandable-search.html
@@ -82,7 +82,7 @@
 		Polymer({
 			is: 'aq-icon-expandable-search',
 
-			property: {
+			properties: {
 				active :{
 					type: Boolean,
 					value: false,
