--- a/src/components/community/aq-community-home-post-item2.html
+++ b/src/components/community/aq-community-home-post-item2.html
@@ -234,6 +234,8 @@
                 thread: {
                     type: Object
                 },
+
+                wide: String,
             },
 
             computeIcon: function(category) {
