--- a/src/components/community/aq-community-previewpost.html
+++ b/src/components/community/aq-community-previewpost.html
@@ -90,7 +90,7 @@
 
                 currentPath: {
                     type: Array,
-                    value: ["Home", "Research", "Community", "Preview Post"]
+                    value: ["Home", "Community", "Preview Post"]
                 },
 
             },
