--- a/src/components/editor/aq-editor-edit.html
+++ b/src/components/editor/aq-editor-edit.html
@@ -521,7 +521,7 @@
                 // Send Execution request via web-sockets
                 this.selectedSidebar = 1;
 
-                this.fire('execute-backtest', {backtestId: this.activeBacktestId});
+                //this.fire('execute-backtest', {backtestId: this.activeBacktestId});
 
                 this.fire('iron-signal', {name: 'backtest-added'});
 
