--- a/src/components/help/aq-help-home.html
+++ b/src/components/help/aq-help-home.html
@@ -252,7 +252,7 @@
 
                 currentPath: {
                     type: Array,
-                    value: ["Home", "Research", "Help"],
+                    value: ["Home", "Help"],
                 },
 
             },
