Added reference of aq-loading-progress

--- a/src/components/common/aq-allpage-layout.html
+++ b/src/components/common/aq-allpage-layout.html
@@ -1,6 +1,7 @@
 <link rel='import' href='../../../bower_components/iron-flex-layout/iron-flex-layout-classes.html'>
 
 <link rel='import' href='./aq-navigation-item.html'>
+<link rel='import' href='./aq-loading-progress.html'>
 
 <dom-module id='aq-allpage-layout'>
 	
